--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -27,17 +28,98 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>supabase_inicial</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    .reverse-spinner {
+      position: relative;
+      left: 50%;
+      top: 50%;
+      height: 100px;
+      width: 100px;
+      border: 4px solid transparent;
+      border-top-color: #1976d2;
+      border-left-color: #1976d2;
+      border-radius: 50%;
+      -webkit-animation: spin 1.5s linear infinite;
+      animation: spin 1.5s linear infinite;
+    }
+
+    .reverse-spinner::before {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      right: 15px;
+      bottom: 15px;
+      content: "";
+      border: 4px solid transparent;
+      border-top-color: #03a9f4;
+      border-left-color: #03a9f4;
+      border-radius: 50%;
+      -webkit-animation: spinBack 1s linear infinite;
+      animation: spinBack 1s linear infinite;
+    }
+
+    @-webkit-keyframes spin {
+      from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+
+      to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes spin {
+      from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+
+      to {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+
+
+    @-webkit-keyframes spinBack {
+      from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+
+      to {
+        -webkit-transform: rotate(-720deg);
+        transform: rotate(-720deg);
+      }
+    }
+
+    @keyframes spinBack {
+      from {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+
+      to {
+        -webkit-transform: rotate(-720deg);
+        transform: rotate(-720deg);
+      }
+    }
+  </style>
 </head>
+
 <body>
+  <div class="reverse-spinner"></div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1536991461';
+    var serviceWorkerVersion = '505282512';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -101,4 +183,5 @@
     }
   </script>
 </body>
+
 </html>
