--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     .reverse-spinner {
       position: relative;
       left: 50%;
+      right: 50%;
       top: 50%;
+      bottom: 50%;
       height: 100px;
       width: 100px;
       border: 4px solid transparent;
@@ -114,12 +116,12 @@
 </head>
 
 <body>
-  <div class="reverse-spinner"></div>
+  <div id="loader" class="reverse-spinner"></div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '505282512';
+    var serviceWorkerVersion = '2907351399';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
