--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <link rel="manifest" href="manifest.json">
   <style>
     .reverse-spinner {
-      position: relative;
+      position: fixed;
       left: 50%;
       right: 50%;
       top: 50%;
@@ -121,7 +121,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2907351399';
+    var serviceWorkerVersion = '2953324736';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
