--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
     .reverse-spinner {
       position: fixed;
       left: 50%;
-      right: 50%;
-      top: 50%;
-      bottom: 50%;
+      top: 25%;
       height: 100px;
       width: 100px;
       border: 4px solid transparent;
-      border-top-color: #1976d2;
-      border-left-color: #1976d2;
+      border-top-color: #26a269;
+      border-left-color: #26a269;
       border-radius: 50%;
       -webkit-animation: spin 1.5s linear infinite;
       animation: spin 1.5s linear infinite;
@@ -57,8 +55,8 @@
       bottom: 15px;
       content: "";
       border: 4px solid transparent;
-      border-top-color: #03a9f4;
-      border-left-color: #03a9f4;
+      border-top-color: #33d17a;
+      border-left-color: #33d17a;
       border-radius: 50%;
       -webkit-animation: spinBack 1s linear infinite;
       animation: spinBack 1s linear infinite;
@@ -121,7 +119,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2953324736';
+    var serviceWorkerVersion = '1735912617';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
